Improvement of BRK load speed

--- a/brk/etl/conf/etl-brk.cfg
+++ b/brk/etl/conf/etl-brk.cfg
@@ -15,7 +15,7 @@
 
 [etl]
 chains = input_sql_pre|schema_name_filter|output_postgres,
-         input_zip_file|extract_zip_file|output_ogr2ogr,
+         input_zip_file|extract_zip_file|prepare_gfs|output_ogr2ogr,
          input_sql_post|schema_name_filter|output_postgres
 
 # Alternative chains for testing
@@ -58,6 +58,11 @@ name_filter = {filename_match}
 class=filters.zipfileextractor.ZipFileExtractor
 file_path = {temp_dir}/fromzip-tmp.gml
 
+# Prepare the generic GFS file to optimize the loading speed
+[prepare_gfs]
+class = stetlcomponents.gfspreparationfilter.GfsPreparationFilter
+input_gfs = {gfs_template}
+
 # The ogr2ogr command-line, may use any output here, as long as
 # the input is a GML file.
 # TODO: find a way to use a GML-stream through stdin to ogr2ogr
@@ -72,9 +77,9 @@ lco = -lco LAUNDER=YES -lco PRECISION=NO
 # spatial_extent, translates to -spat xmin ymin xmax ymax
 spatial_extent = {spatial_extent}
 # gfs template
-gfs_template = {gfs_template}
+#gfs_template = {gfs_template}
 # miscellaneous ogr2ogr options
-options = -append -gt 65536 {multi_opts} --config PG_USE_COPY NO --config CPL_ZIP_ENCODING CP437
+options = -append -gt 65536 {multi_opts} --config CPL_ZIP_ENCODING CP437
 	
 # Below alternative outputs are meant for testing
 
