--- a/brk/etl/conf/etl-brk.cfg
+++ b/brk/etl/conf/etl-brk.cfg
@@ -29,7 +29,7 @@ file_path = sql/drop-tables.sql,sql/create-schema.sql
 # Post SQL file inputs to be executed
 [input_sql_post]
 class = inputs.fileinput.StringFileInput
-file_path = sql/delete-duplicates.sql
+file_path = sql/delete-duplicates.sql,sql/create-final-tables.sql
 
 # Generic filter to substitute Python-format string values like {schema} in string
 [schema_name_filter]
