Replace name of GFS file by gfs_template placeholder

--- a/bgt/etl/conf/etl-imgeo-v2.1.1.cfg
+++ b/bgt/etl/conf/etl-imgeo-v2.1.1.cfg
@@ -71,7 +71,7 @@ delete_file = False
 # Prepare the generic GFS file to optimize the loading speed
 [prepare_gfs]
 class = stetlcomponents.gfspreparationfilter.GfsPreparationFilter
-input_gfs = gfs/imgeo-v2.1.1.gfs
+input_gfs = {gfs_template}
 
 # The ogr2ogr command-line, may use any output here, as long as
 # the input is a GML file. The "temp_file" is where etree-docs
@@ -110,7 +110,7 @@ delete_file = False
 class = outputs.execoutput.Ogr2OgrExecOutput
 dest_format = PostgreSQL
 dest_data_source = "PG:dbname={database} host={host} port={port} user={user} password={password} active_schema={schema}"
-gfs_template = gfs/imgeo-v2.1.1.gfs
+gfs_template = {gfs_template}
 options = -append -gt 65536 {multi_opts}
 cleanup_input = True
 
