--- a/brt/top1000nl/etl/conf/etl-top1000nl-v1.2.0.cfg
+++ b/brt/top1000nl/etl/conf/etl-top1000nl-v1.2.0.cfg
@@ -72,7 +72,7 @@ lco = -lco LAUNDER=YES -lco PRECISION=NO
 # spatial_extent, translates to -spat xmin ymin xmax ymax
 spatial_extent = {spatial_extent}
 # gfs template
-gfs_template = gfs/top1000-v1.2.0.gfs
+gfs_template = {gfs_template}
 # miscellaneous ogr2ogr options
 options = -append -gt 65536 {multi_opts}
 # cleanup input?
