--- a/brt/top100nl/etl/conf/etl-top100nl-v1.1.cfg
+++ b/brt/top100nl/etl/conf/etl-top100nl-v1.1.cfg
@@ -61,7 +61,7 @@ file_path = {temp_dir}/fromzip-tmp.gml
 # Prepare the generic GFS file to optimize the loading speed
 [prepare_gfs]
 class = stetlcomponents.gfspreparationfilter.GfsPreparationFilter
-input_gfs = gfs/top100-v1.1.gfs
+input_gfs = {gfs_template}
 
 # The ogr2ogr command-line, may use any output here, as long as
 # the input is a GML file. The "temp_file" is where etree-docs
@@ -78,7 +78,7 @@ lco = -lco LAUNDER=YES -lco PRECISION=NO
 # spatial_extent, translates to -spat xmin ymin xmax ymax
 spatial_extent = {spatial_extent}
 # gfs template
-#gfs_template = gfs/top100-v1.1.gfs
+#gfs_template = {gfs_template}
 # miscellaneous ogr2ogr options
 options = -append -gt 65536 {multi_opts}
 # cleanup input?
@@ -100,7 +100,7 @@ delete_file = False
 class = outputs.execoutput.Ogr2OgrExecOutput
 dest_format = PostgreSQL
 dest_data_source = "PG:dbname={database} host={host} port={port} user={user} password={password} active_schema={schema}"
-gfs_template = gfs/top100-v1.1.gfs
+gfs_template = {gfs_template}
 options = -append -gt 65536 {multi_opts}
 cleanup_input = True
 
