--- a/brt/top500nl/etl/conf/etl-top500nl-v1.2.1.cfg
+++ b/brt/top500nl/etl/conf/etl-top500nl-v1.2.1.cfg
@@ -72,7 +72,7 @@ lco = -lco LAUNDER=YES -lco PRECISION=NO
 # spatial_extent, translates to -spat xmin ymin xmax ymax
 spatial_extent = {spatial_extent}
 # gfs template
-gfs_template = gfs/top500-v1.2.1.gfs
+gfs_template = {gfs_template}
 # miscellaneous ogr2ogr options
 options = -append -gt 65536 {multi_opts}
 # cleanup input?
