Cleanup BRK input while loading

--- a/brk/etl/conf/etl-brk.cfg
+++ b/brk/etl/conf/etl-brk.cfg
@@ -80,7 +80,9 @@ spatial_extent = {spatial_extent}
 #gfs_template = {gfs_template}
 # miscellaneous ogr2ogr options
 options = -append -gt 65536 {multi_opts} --config CPL_ZIP_ENCODING CP437
-	
+# cleanup input?
+cleanup_input = True
+
 # Below alternative outputs are meant for testing
 
 # Send to stdout
