--- a/brt/top1000nl/etl/conf/etl-top1000nl-v1.2.0.cfg
+++ b/brt/top1000nl/etl/conf/etl-top1000nl-v1.2.0.cfg
@@ -28,7 +28,7 @@ file_path = sql/drop-tables-v1.2.0.sql,sql/create-schema.sql
 # Post SQL file inputs to be executed
 [input_sql_post]
 class = inputs.fileinput.StringFileInput
-file_path = sql/update-geoms-v1.2.0.sql
+file_path = sql/create-final-tables-v1.2.0.sql
 
 # Generic filter to substitute Python-format string values like {schema} in string
 [schema_name_filter]
