Fixed #240: added new filter to handle BGT openbareruimtelabel features

--- a/bgt/etl/conf/etl-imgeo-v2.1.1.cfg
+++ b/bgt/etl/conf/etl-imgeo-v2.1.1.cfg
@@ -17,7 +17,7 @@
 
 [etl]
 chains = input_sql_pre|schema_name_filter|output_postgres,
-         input_zip_file|extract_zip_file|prepare_gfs|output_ogr2ogr,
+         input_zip_file|extract_zip_file|handle_orl|prepare_gfs|output_ogr2ogr,
          input_dummy_zip_file|extract_dummy_zip_file|output_ogr2ogr_init,
          input_sql_post|schema_name_filter|output_postgres
 
@@ -67,6 +67,11 @@ template_string = /vsizip/$file_path/$name
 class=filters.zipfileextractor.ZipFileExtractor
 file_path = {temp_dir}/fromzip-tmp.gml
 delete_file = False
+
+# Filter to copy openbareruimtelabel features with only one position per feature
+[handle_orl]
+class=stetlbgt.orlhandler.OrlHandler
+temp_file = {temp_dir}/orl-tmp.gml
 
 # Prepare the generic GFS file to optimize the loading speed
 [prepare_gfs]
