Issue #205: added separate script to drop final BGT tables; can be left out if desired

--- a/bgt/etl/conf/etl-imgeo-v2.1.1.cfg
+++ b/bgt/etl/conf/etl-imgeo-v2.1.1.cfg
@@ -29,7 +29,7 @@ chains = input_sql_pre|schema_name_filter|output_postgres,
 # Pre SQL file inputs to be executed
 [input_sql_pre]
 class = inputs.fileinput.StringFileInput
-file_path = sql/create-schema.sql,sql/drop-tables-v2.1.1.sql
+file_path = sql/create-schema.sql,sql/drop-tables-v2.1.1.sql,sql/drop-final-tables-v2.1.1.sql
 
 # Post SQL file inputs to be executed
 [input_sql_post]
