Fixed #268: pand_nummeraanduiding is now its own feature class

--- a/bgt/etl/conf/etl-imgeo-v2.1.1.cfg
+++ b/bgt/etl/conf/etl-imgeo-v2.1.1.cfg
@@ -17,7 +17,7 @@
 
 [etl]
 chains = input_sql_pre|schema_name_filter|output_postgres,
-         input_zip_file|extract_zip_file|handle_orl|prepare_gfs|output_ogr2ogr,
+         input_zip_file|extract_zip_file|handle_orl|handle_pand|prepare_gfs|output_ogr2ogr,
          input_dummy_zip_file|extract_dummy_zip_file|output_ogr2ogr_init,
          input_sql_post|schema_name_filter|output_postgres
 
@@ -72,6 +72,11 @@ delete_file = False
 [handle_orl]
 class=stetlbgt.orlhandler.OrlHandler
 temp_file = {temp_dir}/orl-tmp.gml
+
+# Filter to copy pand features with only the main geometry, or only one nummeraanduiding per feature
+[handle_pand]
+class=stetlbgt.pandhandler.PandHandler
+temp_file = {temp_dir}/pand-tmp.gml
 
 # Prepare the generic GFS file to optimize the loading speed
 [prepare_gfs]
