In BGT ETL merge OrlHandler and PandHandler into one Stetl filter, adding config options to support both cases

--- a/bgt/etl/conf/etl-imgeo-v2.1.1.cfg
+++ b/bgt/etl/conf/etl-imgeo-v2.1.1.cfg
@@ -70,13 +70,27 @@ delete_file = False
 
 # Filter to copy openbareruimtelabel features with only one position per feature
 [handle_orl]
-class=stetlbgt.orlhandler.OrlHandler
+class=stetlbgt.subfeaturehandler.SubFeatureHandler
 temp_file = {temp_dir}/orl-tmp.gml
+parent_tag_ns = http://www.geostandaarden.nl/imgeo/2.1
+parent_tag_name = OpenbareRuimteLabel
+namespace_mapping = imgeo:http://www.geostandaarden.nl/imgeo/2.1
+child_feature_xpath = imgeo:positie
+keep_parent_feature = False
+# child_feature_alt_tag_name =
+# parent_feature_geom_name =
 
 # Filter to copy pand features with only the main geometry, or only one nummeraanduiding per feature
 [handle_pand]
-class=stetlbgt.pandhandler.PandHandler
+class=stetlbgt.subfeaturehandler.SubFeatureHandler
 temp_file = {temp_dir}/pand-tmp.gml
+parent_tag_ns = http://www.opengis.net/citygml/building/2.0
+parent_tag_name = BuildingPart
+namespace_mapping = imgeo:http://www.geostandaarden.nl/imgeo/2.1
+child_feature_xpath = imgeo:nummeraanduidingreeks[imgeo:Nummeraanduidingreeks]
+keep_parent_feature = True
+child_feature_alt_tag_name = BuildingPart_nummeraanduiding
+parent_feature_geom_name = imgeo:geometrie2dGrondvlak
 
 # Prepare the generic GFS file to optimize the loading speed
 [prepare_gfs]
