--- a/brt/top10nl/etl/conf/etl-top10nl-v1.2.cfg
+++ b/brt/top10nl/etl/conf/etl-top10nl-v1.2.cfg
@@ -48,14 +48,14 @@ schema = {schema}
 
 # The source input ZIP-file(s) from dir, producing 'records' with ZIP file name and inner file names
 [input_zip_file]
-class=inputs.fileinput.ZipFileInput
+class = stetl.inputs.fileinput.ZipFileInput
 file_path = {input_dir}
 filename_pattern = *.[zZ][iI][pP]
 name_filter=*.[gG][mM][lL]
 
 # Filter to extract a ZIP file one by one to a temporary location
 [extract_zip_file]
-class=filters.zipfileextractor.ZipFileExtractor
+class = stetl.filters.zipfileextractor.ZipFileExtractor
 file_path = {temp_dir}/fromzip-tmp.gml
 
 # Prepare the generic GFS file to optimize the loading speed
@@ -85,12 +85,12 @@ options = -append -gt 65536 {multi_opts}
 cleanup_input = True
 
 [input_dummy_zip_file]
-class=inputs.fileinput.ZipFileInput
+class = stetl.inputs.fileinput.ZipFileInput
 file_path = data
 filename_pattern = dummy.zip
 
 [extract_dummy_zip_file]
-class=filters.zipfileextractor.ZipFileExtractor
+class = stetl.filters.zipfileextractor.ZipFileExtractor
 file_path = {temp_dir}/dummy.gml
 delete_file = False
 
