--- a/brt/top250nl/etl/conf/etl-top250nl-v1.2.1.cfg
+++ b/brt/top250nl/etl/conf/etl-top250nl-v1.2.1.cfg
@@ -47,14 +47,14 @@ schema = {schema}
 
 # The source input ZIP-file(s) from dir, producing 'records' with ZIP file name and inner file names
 [input_zip_file]
-class=inputs.fileinput.ZipFileInput
+class = stetl.inputs.fileinput.ZipFileInput
 file_path = {input_dir}
 filename_pattern = *.[zZ][iI][pP]
 name_filter=*.[gG][mM][lL]
 
 # Filter to extract a ZIP file one by one to a temporary location
 [extract_zip_file]
-class=filters.zipfileextractor.ZipFileExtractor
+class = stetl.filters.zipfileextractor.ZipFileExtractor
 file_path = {temp_dir}/fromzip-tmp.gml
 
 # The ogr2ogr command-line, may use any output here, as long as
