#265 use new BGT download, no need for dedup config option anymore

--- a/bgt/etl/conf/etl-imgeo-v2.1.1.cfg
+++ b/bgt/etl/conf/etl-imgeo-v2.1.1.cfg
@@ -34,7 +34,7 @@ file_path = sql/create-schema.sql,sql/drop-tables-v2.1.1.sql,sql/drop-final-tabl
 # Post SQL file inputs to be executed
 [input_sql_post]
 class = stetl.inputs.fileinput.StringFileInput
-file_path = sql/create-final-tables-v2.1.1.sql,{delete_dups},sql/fix-eindregistratie.sql
+file_path = sql/create-final-tables-v2.1.1.sql,sql/fix-eindregistratie.sql
 
 # Generic filter to substitute Python-format string values like {schema} in string
 [schema_name_filter]
