working requirements for Python 3.7.1

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,30 @@
-# Working requirements
+# Working requirements with Python 3.7.1 and Wheel
 alabaster==0.7.12
-Babel==2.8.0
-certifi==2020.6.20
+Babel==2.9.0
+certifi==2020.11.8
 chardet==3.0.4
 Deprecated==1.2.10
 docutils==0.16
-GDAL==2.3.1
+GDAL==3.2.0
 idna==2.10
 imagesize==1.2.0
 Jinja2==2.11.2
-lxml==4.5.2
+lxml==4.6.1
 MarkupSafe==1.1.1
 packaging==20.4
-psycopg2==2.8.5
-Pygments==2.6.1
+psycopg2==2.8.6
+Pygments==2.7.2
 pyparsing==2.4.7
-pytz==2020.1
-requests==2.24.0
+pytz==2020.4
+requests==2.25.0
 six==1.15.0
 snowballstemmer==2.0.0
-Sphinx==3.1.2
-urllib3==1.25.10
+Sphinx==3.3.1
+sphinxcontrib-applehelp==1.0.2
+sphinxcontrib-devhelp==1.0.2
+sphinxcontrib-htmlhelp==1.0.3
+sphinxcontrib-jsmath==1.0.1
+sphinxcontrib-qthelp==1.0.3
+sphinxcontrib-serializinghtml==1.1.4
+urllib3==1.26.2
 wrapt==1.12.1
-xlrd==1.2.0
