#296 further progress on BAG v2 with Docker

--- a/bagv2/etl/conf/etl-imbag-v2.1.0.cfg
+++ b/bagv2/etl/conf/etl-imbag-v2.1.0.cfg
@@ -6,8 +6,7 @@
 # Currently 3 chains are executed in the following order:
 # - SQL pre:  DB initialization, delete tables, create schema
 # - Main ETL chain, consists of the following components
-# 1. input_zip_file: reads files from input ZIP file(s)
-# 2. extract_zip_file: extracts a zip file from a ZIP file
+# 1. input_bag_lv_zip_file: reads files from input ZIP file(s)
 # 3. output_ogr2ogr: output using ogr2ogr, input is a zip file for one BAG object type, output can be any OGR output
 #
 # Any substitutable values are specified in curly brackets e.g. {password}.
@@ -15,21 +14,24 @@
 
 [etl]
 chains = input_sql_pre|schema_name_filter|output_postgres,
-#         input_bag_gem_zip_file|extract_bag_zip_file,
-#         input_bagobj_gem__zip_file|extract_bagobj_zip_file|vsizip_prepend|output_ogr2ogr
-         input_baglv_zip_file|extract_bagobj_zip_file|vsizip_prepend|output_ogr2ogr
+         input_bag_lv_zip_file|output_ogr2ogr
+         # input_sql_pre|schema_name_filter|output_postgres,
+#         input_bag_obj_zip_file|output_std,
+#         input_bag_gem_zip_file|output_std,
+#         input_bag_lv_zip_file|output_ogr2ogr
+         # input_bag_obj_zip_file|output_ogr2ogr
+#         input_bag_zip_file|extract_bagobj_zip_file|vsizip_prepend|output_std
 #         input_sql_post|schema_name_filter|output_postgres
 
 # Pre SQL file inputs to be executed
 [input_sql_pre]
 class = stetl.inputs.fileinput.StringFileInput
-# file_path = sql/create-schema.sql,sql/drop-tables-v2.1.1.sql,sql/drop-final-tables-v2.1.1.sql
 file_path = sql/create-schema.sql
 
 # Post SQL file inputs to be executed
 [input_sql_post]
 class = stetl.inputs.fileinput.StringFileInput
-file_path = sql/create-final-tables-v2.1.1.sql,sql/fix-eindregistratie.sql
+file_path = sql/create-views-.sql,sql/fix-eindregistratie.sql
 
 # Generic filter to substitute Python-format string values like {schema} in string
 [schema_name_filter]
@@ -48,42 +50,26 @@ schema = {schema}
 
 # The source input ZIP-file(s) for a Gemeente (Municipality)
 # Has different zip structure than country-wide (LV) BAG.
-[input_bag_gem_zip_file]
-class = stetl.inputs.fileinput.ZipFileInput
-file_path = {input_dir}
-filename_pattern = BAG*.zip
-name_filter=0*GEM*.zip
+[input_bag_obj_zip_file]
+class = stetl.inputs.fileinput.VsiZipFileInput
+file_path = {input_dir}/0221PND15092020.zip
+name_filter = {bag_obj_file_pat}*.xml
 
 # The zip file within the gem zipfile contains the zip files for each bag obj type
-[input_bagobj_gem__zip_file]
-class = stetl.inputs.fileinput.ZipFileInput
-file_path = {temp_dir}/bag.zip
-name_filter = *[LSVNPOW][ITBUNPP][GAOMDRL]*.zip
+[input_bag_gem_zip_file]
+class = stetl.inputs.fileinput.VsiZipFileInput
+file_path = test/BAGGEM0221L-15022021.zip
+# 0221NUM15022021-000001.xml
+# 9999PND08112020.zip
+name_filter = {bag_obj_file_pat}*.xml
 
 # The zip file for the LV zipfile directly contains the zip files for each bag obj type
-[input_baglv_zip_file]
-class = stetl.inputs.fileinput.ZipFileInput
-file_path = {input_dir}/lv/BAGNLDL-*.zip
-name_filter = *[LSVNPOW][ITBUNPP][GAOMDRL]*.zip
-
-# Filter to extract a ZIP file one by one to a temporary location
-# and pass the zipfile name to the next in Chain.
-[extract_bag_zip_file]
-class = stetl.filters.zipfileextractor.ZipFileExtractor
-file_path = {temp_dir}/bag.zip
-delete_file = False
-
-# Filter to extract a ZIP file one by one to a temporary location
-# and pass the zipfile name to the next in Chain.
-[extract_bagobj_zip_file]
-class = stetl.filters.zipfileextractor.ZipFileExtractor
-file_path = {temp_dir}/bagobj.zip
-delete_file = False
-
-# Filter to generate the vsizip-names for ogr2ogr from input zip file name
-[vsizip_prepend]
-class = stetl.filters.stringfilter.StringConcatFilter
-prepend_string = /vsizip/
+[input_bag_lv_zip_file]
+class = stetl.inputs.fileinput.VsiZipFileInput
+file_path = {lv_file}
+# file_path = /Users/just/project/nlextract/data/BAG-2.0/BAGNLDL-*.zip
+# name_filter = {bag_obj_file_pat}*.xml
+name_filter = {bag_obj_file_pat}.zip
 
 # The ogr2ogr command-line, may use any output here, as long as
 # the input is a BAG Object Zip file. The input file-path is passed
@@ -99,7 +85,7 @@ lco = -lco LAUNDER=YES -lco PRECISION=NO
 # spatial_extent, translates to -spat xmin ymin xmax ymax
 spatial_extent = {spatial_extent}
 # miscellaneous ogr2ogr options
-options = -overwrite -append -gt 65536 {multi_opts}
+options = -overwrite {srs_opts} -gt 65536 {multi_opts} {lvbag_driver_opts}
 # cleanup input?
 cleanup_input = False
 
