#296 further progress on BAG v2 with Docker

--- a/bagv2/etl/conf/etl-imbag-v2.1.0.cfg
+++ b/bagv2/etl/conf/etl-imbag-v2.1.0.cfg
@@ -14,7 +14,7 @@
 
 [etl]
 chains = input_sql_pre|schema_name_filter|output_postgres,
-         input_bag_lv_zip_file|output_ogr2ogr
+         input_bag_zip_file|output_ogr2ogr
          # input_sql_pre|schema_name_filter|output_postgres,
 #         input_bag_obj_zip_file|output_std,
 #         input_bag_gem_zip_file|output_std,
@@ -26,7 +26,7 @@ chains = input_sql_pre|schema_name_filter|output_postgres,
 # Pre SQL file inputs to be executed
 [input_sql_pre]
 class = stetl.inputs.fileinput.StringFileInput
-file_path = sql/create-schema.sql
+file_path = sql/create-schema.sql,sql/create-tables.sql
 
 # Post SQL file inputs to be executed
 [input_sql_post]
@@ -41,35 +41,20 @@ format_args = schema:{schema}
 
 [output_postgres]
 class = stetl.outputs.dboutput.PostgresDbOutput
-database = {database}
-host = {host}
-port = {port}
-user = {user}
+database = {pg_db}
+host = {pg_host}
+port = {pg_port}
+user = {pg_user}
 password = {password}
 schema = {schema}
 
-# The source input ZIP-file(s) for a Gemeente (Municipality)
-# Has different zip structure than country-wide (LV) BAG.
-[input_bag_obj_zip_file]
-class = stetl.inputs.fileinput.VsiZipFileInput
-file_path = {input_dir}/0221PND15092020.zip
-name_filter = {bag_obj_file_pat}*.xml
-
-# The zip file within the gem zipfile contains the zip files for each bag obj type
-[input_bag_gem_zip_file]
-class = stetl.inputs.fileinput.VsiZipFileInput
-file_path = test/BAGGEM0221L-15022021.zip
-# 0221NUM15022021-000001.xml
-# 9999PND08112020.zip
-name_filter = {bag_obj_file_pat}*.xml
-
 # The zip file for the LV zipfile directly contains the zip files for each bag obj type
-[input_bag_lv_zip_file]
+[input_bag_zip_file]
 class = stetl.inputs.fileinput.VsiZipFileInput
-file_path = {lv_file}
+file_path = {bag_input_file}
 # file_path = /Users/just/project/nlextract/data/BAG-2.0/BAGNLDL-*.zip
 # name_filter = {bag_obj_file_pat}*.xml
-name_filter = {bag_obj_file_pat}.zip
+name_filter = {bag_obj_file_pat}*.{file_ext_filter}
 
 # The ogr2ogr command-line, may use any output here, as long as
 # the input is a BAG Object Zip file. The input file-path is passed
@@ -79,13 +64,14 @@ class = stetl.outputs.execoutput.Ogr2OgrExecOutput
 # destination format: OGR vector format name
 dest_format = PostgreSQL
 # destination datasource: name of datasource
-dest_data_source = "PG:dbname={database} host={host} port={port} user={user} password={password} active_schema={schema}"
+dest_data_source = "PG:dbname={pg_db} host={pg_host} port={pg_port} user={pg_user} password={password} active_schema={schema}"
 # layer creation options will only be added to ogr2ogr on first run
-lco = -lco LAUNDER=YES -lco PRECISION=NO
+lco = {layer_creation_opts}
+
 # spatial_extent, translates to -spat xmin ymin xmax ymax
 spatial_extent = {spatial_extent}
 # miscellaneous ogr2ogr options
-options = -overwrite {srs_opts} -gt 65536 {multi_opts} {lvbag_driver_opts}
+options = -append -skipfailures {srs_opts} {feat_per_tx} {multival_opts} {open_opts}
 # cleanup input?
 cleanup_input = False
 
