update Stetl for geopython/stetl#112 - VsiZip support

--- a/bagv2/etl/conf/etl-imbag-2.1.0.cfg
+++ b/bagv2/etl/conf/etl-imbag-2.1.0.cfg
@@ -13,31 +13,46 @@
 # Actual values can be passed as args to Stetl main.py.
 
 [etl]
-chains = input_sql_pre|schema_name_filter|output_postgres,
-         input_bag_zip_file|output_ogr2ogr
-         # input_sql_pre|schema_name_filter|output_postgres,
+chains = input_sql_pre|output_postgres,
+         # input_cbs_gemeenten_csv|output_postgres_gemeenten,
+         input_bag_wpl_gem_koppeling_file|convert_vsi_to_etree_doc|transformer_xslt_gem_wpl|output_ogr_postgis
+#         input_bag_zip_file|output_ogr2ogr,
+#         input_sql_post|output_postgres
+
 #         input_bag_obj_zip_file|output_std,
 #         input_bag_gem_zip_file|output_std,
 #         input_bag_lv_zip_file|output_ogr2ogr
          # input_bag_obj_zip_file|output_ogr2ogr
 #         input_bag_zip_file|extract_bagobj_zip_file|vsizip_prepend|output_std
-#         input_sql_post|schema_name_filter|output_postgres
 
 # Pre SQL file inputs to be executed
 [input_sql_pre]
 class = stetl.inputs.fileinput.StringFileInput
-file_path = sql/create-schema.sql,sql/create-tables.sql
+file_path = sql/create-schema.sql,sql/create-meta.sql,sql/create-tables.sql
+format_args = schema:{schema}
 
 # Post SQL file inputs to be executed
 [input_sql_post]
 class = stetl.inputs.fileinput.StringFileInput
-file_path = sql/create-views-.sql,sql/fix-eindregistratie.sql
-
-# Generic filter to substitute Python-format string values like {schema} in string
-[schema_name_filter]
-class = stetl.filters.stringfilter.StringSubstitutionFilter
-# format args {schema} is schema name
+file_path = sql/create-views.sql,sql/create-indexes.sql
 format_args = schema:{schema}
+
+[input_cbs_gemeenten_csv]
+class = stetl.inputs.fileinput.CsvFileInput
+file_path = data/cbs/gemeente/{cbs_gemeenten_jaar}.csv
+delimiter = ;
+
+[output_postgres_gemeenten]
+class = stetl.outputs.dboutput.PostgresInsertOutput
+database = {pg_db}
+host = {pg_host}
+port = {pg_port}
+user = {pg_user}
+password = {password}
+schema = {schema}
+table = provincie_gemeente
+key = gemeentecode
+replace = true
 
 [output_postgres]
 class = stetl.outputs.dboutput.PostgresDbOutput
@@ -52,15 +67,44 @@ schema = {schema}
 [input_bag_zip_file]
 class = stetl.inputs.fileinput.VsiZipFileInput
 file_path = {bag_input_file}
-# file_path = /Users/just/project/nlextract/data/BAG-2.0/BAGNLDL-*.zip
-# name_filter = {bag_obj_file_pat}*.xml
 name_filter = {bag_obj_file_pat}*.{file_ext_filter}
 
-# The ogr2ogr command-line, may use any output here, as long as
+# The GEM-WPL-RELATIE- XML file
+[input_bag_wpl_gem_koppeling_file]
+class = stetl.inputs.fileinput.VsiZipFileInput
+file_path = {bag_input_file}
+name_filter = GEM-WPL-RELATIE*.xml
+
+[convert_vsi_to_etree_doc]
+class = stetl.filters.formatconverter.FormatConverter
+input_format = gdal_vsi_path
+output_format = etree_doc
+
+[transformer_xslt_gem_wpl]
+class = stetl.filters.xsltfilter.XsltFilter
+script = xsl/GEM-WPL-RELATIE2gml.xsl
+
+# The ogr2ogr command-line for generic GML Features.
+[output_ogr_postgis]
+class = stetl.outputs.ogroutput.Ogr2OgrOutput
+temp_file = temp/bagger.xml
+ogr2ogr_cmd = ogr2ogr
+    -overwrite
+    -f PostgreSQL
+    "PG:dbname={pg_db} host={pg_host} port={pg_port} user={pg_user} password={password} active_schema={schema}"
+    -oo GML_GFS_TEMPLATE=gfs/imbag-2.1.0.gfs
+    {srs_opts}
+    temp/bagger.xml
+
+# The ogr2ogr command-line for LVBAG, may use any output here, as long as
 # the input is a BAG Object Zip file. The input file-path is passed
 # as data Packet to this component.
 [output_ogr2ogr]
 class = stetl.outputs.execoutput.Ogr2OgrExecOutput
+
+# Must set as multiple input formats supported
+input_format = gdal_vsi_path
+
 # destination format: OGR vector format name
 dest_format = PostgreSQL
 # destination datasource: name of datasource
