#296 WIP working version met VIEWs plus GEM-WPL-RELATIE en CBS GemProv

--- a/bagv2/etl/conf/etl-imbag-2.1.0.cfg
+++ b/bagv2/etl/conf/etl-imbag-2.1.0.cfg
@@ -3,27 +3,26 @@
 # The output of a Component is connected to the input of the next Component (except for
 # the final Output Component, which writes to the final destination, e.g. PostGIS or GeoPackage..
 #
-# Currently 3 chains are executed in the following order:
+# Currently the following chains are executed in the following order:
 # - SQL pre:  DB initialization, delete tables, create schema
-# - Main ETL chain, consists of the following components
-# 1. input_bag_lv_zip_file: reads files from input ZIP file(s)
-# 3. output_ogr2ogr: output using ogr2ogr, input is a zip file for one BAG object type, output can be any OGR output
+# - CBS gemeente provincie koppelingen
+# - BAG Woonplaats-Gemeente Koppeling (onderdeel van BAG Extract Kadaster product)
+# - input_bag_zip_file: inlezen BAG in PostGIS met LVBAG Driver
+# - input_sql_post: post=processing o.a. aanmaken VIEWs
 #
 # Any substitutable values are specified in curly brackets e.g. {password}.
 # Actual values can be passed as args to Stetl main.py.
 
-[etl]
-chains = input_sql_pre|output_postgres,
-         # input_cbs_gemeenten_csv|output_postgres_gemeenten,
-         input_bag_wpl_gem_koppeling_file|convert_vsi_to_etree_doc|transformer_xslt_gem_wpl|output_ogr_postgis
-#         input_bag_zip_file|output_ogr2ogr,
-#         input_sql_post|output_postgres
+# Just van den Broecke - 2021
 
-#         input_bag_obj_zip_file|output_std,
-#         input_bag_gem_zip_file|output_std,
-#         input_bag_lv_zip_file|output_ogr2ogr
-         # input_bag_obj_zip_file|output_ogr2ogr
-#         input_bag_zip_file|extract_bagobj_zip_file|vsizip_prepend|output_std
+[etl]
+chains = input_sql_pre|output_postgres_sql,
+         input_cbs_gemeenten_csv|output_postgres_gemeenten,
+         input_bag_wpl_gem_koppeling_file|convert_vsi_to_etree_doc|transformer_xslt_gem_wpl|output_ogr_postgis,
+         input_bag_zip_file|output_ogr2ogr,
+         input_sql_post|output_postgres_sql
+
+# chains = input_sql_post|output_postgres_sql
 
 # Pre SQL file inputs to be executed
 [input_sql_pre]
@@ -34,14 +33,16 @@ format_args = schema:{schema}
 # Post SQL file inputs to be executed
 [input_sql_post]
 class = stetl.inputs.fileinput.StringFileInput
-file_path = sql/create-views.sql,sql/create-indexes.sql
+file_path = sql/finalize-tables.sql,sql/create-views.sql,sql/create-indexes.sql
 format_args = schema:{schema}
 
+# Input file gemeente-provincies van CBS per jaar
 [input_cbs_gemeenten_csv]
 class = stetl.inputs.fileinput.CsvFileInput
 file_path = data/cbs/gemeente/{cbs_gemeenten_jaar}.csv
 delimiter = ;
 
+# Postgres provincie_gemeente tabel wegschrijven
 [output_postgres_gemeenten]
 class = stetl.outputs.dboutput.PostgresInsertOutput
 database = {pg_db}
@@ -54,7 +55,8 @@ table = provincie_gemeente
 key = gemeentecode
 replace = true
 
-[output_postgres]
+# Algemeene Postgres SQL Executor
+[output_postgres_sql]
 class = stetl.outputs.dboutput.PostgresDbOutput
 database = {pg_db}
 host = {pg_host}
@@ -63,23 +65,27 @@ user = {pg_user}
 password = {password}
 schema = {schema}
 
-# The zip file for the LV zipfile directly contains the zip files for each bag obj type
+# The zip file for the LV zipfile directly
+# contains the zip files for each bag obj type
+# Outputs VsiZip file strings
 [input_bag_zip_file]
 class = stetl.inputs.fileinput.VsiZipFileInput
 file_path = {bag_input_file}
 name_filter = {bag_obj_file_pat}*.{file_ext_filter}
 
-# The GEM-WPL-RELATIE- XML file
+# The GEM-WPL-RELATIE XML Input file
 [input_bag_wpl_gem_koppeling_file]
 class = stetl.inputs.fileinput.VsiZipFileInput
 file_path = {bag_input_file}
 name_filter = GEM-WPL-RELATIE*.xml
 
+# generic converter: OGR VSI (zip) path string to parsed XML tree doc
 [convert_vsi_to_etree_doc]
 class = stetl.filters.formatconverter.FormatConverter
 input_format = gdal_vsi_path
 output_format = etree_doc
 
+# XSLT transformer GEM-WPL-RELATIE to OGR Simple Feature GML doctree
 [transformer_xslt_gem_wpl]
 class = stetl.filters.xsltfilter.XsltFilter
 script = xsl/GEM-WPL-RELATIE2gml.xsl
@@ -90,9 +96,11 @@ class = stetl.outputs.ogroutput.Ogr2OgrOutput
 temp_file = temp/bagger.xml
 ogr2ogr_cmd = ogr2ogr
     -overwrite
+    {layer_creation_opts}
     -f PostgreSQL
     "PG:dbname={pg_db} host={pg_host} port={pg_port} user={pg_user} password={password} active_schema={schema}"
-    -oo GML_GFS_TEMPLATE=gfs/imbag-2.1.0.gfs
+    -oo GFS_TEMPLATE=gfs/imbag-2.1.0.gfs
+    -oo WRITE_GFS=NO
     {srs_opts}
     temp/bagger.xml
 
