#296 #306 progress BAGv2 to PostGIS meta and more

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,7 +4,7 @@ name: Publish Docker Image
 # events but only for the master branch
 on:
   push:
-    branches: [ master, bagv2 ]
+    branches: [ master ]
   pull_request:
     branches: [ master ]
 
