--- a/bagv2/etl/conf/etl-imbag-2.1.0.cfg
+++ b/bagv2/etl/conf/etl-imbag-2.1.0.cfg
@@ -17,6 +17,7 @@
 
 [etl]
 chains = input_sql_pre|output_postgres_sql,
+         input_bag_leveringsdoc_file|convert_vsi_to_etree_doc|transformer_xslt_leveringsdoc|output_ogr_postgis,
          input_cbs_gemeenten_csv|output_postgres_gemeenten,
          input_bag_wpl_gem_koppeling_file|convert_vsi_to_etree_doc|transformer_xslt_gem_wpl|output_ogr_postgis,
          input_bag_zip_file|output_ogr2ogr,
@@ -55,7 +56,7 @@ table = provincie_gemeente
 key = gemeentecode
 replace = true
 
-# Algemeene Postgres SQL Executor
+# Algemene Postgres SQL Executor
 [output_postgres_sql]
 class = stetl.outputs.dboutput.PostgresDbOutput
 database = {pg_db}
@@ -79,6 +80,12 @@ class = stetl.inputs.fileinput.VsiZipFileInput
 file_path = {bag_input_file}
 name_filter = GEM-WPL-RELATIE*.xml
 
+# The Leveringsdocument-BAG-Extract XML Input file
+[input_bag_leveringsdoc_file]
+class = stetl.inputs.fileinput.VsiZipFileInput
+file_path = {bag_input_file}
+name_filter = Leveringsdocument-BAG-Extract.xml
+
 # generic converter: OGR VSI (zip) path string to parsed XML tree doc
 [convert_vsi_to_etree_doc]
 class = stetl.filters.formatconverter.FormatConverter
@@ -90,12 +97,17 @@ output_format = etree_doc
 class = stetl.filters.xsltfilter.XsltFilter
 script = xsl/GEM-WPL-RELATIE2gml.xsl
 
+# XSLT transformer Leveringsdocument-BAG-Extract  to OGR Simple Feature GML doctree
+[transformer_xslt_leveringsdoc]
+class = stetl.filters.xsltfilter.XsltFilter
+script = xsl/Leveringsdoc2gml.xsl
+
 # The ogr2ogr command-line for generic GML Features.
 [output_ogr_postgis]
 class = stetl.outputs.ogroutput.Ogr2OgrOutput
 temp_file = temp/bagger.xml
 ogr2ogr_cmd = ogr2ogr
-    -overwrite
+    -append
     {layer_creation_opts}
     -f PostgreSQL
     "PG:dbname={pg_db} host={pg_host} port={pg_port} user={pg_user} password={password} active_schema={schema}"
