#296 #306 test with new Stetl Vsi components ok

--- a/bagv2/etl/conf/etl-imbag-2.1.0.cfg
+++ b/bagv2/etl/conf/etl-imbag-2.1.0.cfg
@@ -16,14 +16,18 @@
 # Just van den Broecke - 2021
 
 [etl]
+# chains = input_bag_zip_file|extract_bag_zip_file|output_std
 chains = input_sql_pre|output_postgres_sql,
-         input_bag_leveringsdoc_file|convert_vsi_to_etree_doc|transformer_xslt_leveringsdoc|output_ogr_postgis,
-         input_cbs_gemeenten_csv|output_postgres_gemeenten,
-         input_bag_wpl_gem_koppeling_file|convert_vsi_to_etree_doc|transformer_xslt_gem_wpl|output_ogr_postgis,
-         input_bag_zip_file|output_ogr2ogr,
+         input_bag_vsizip_file|extract_bag_vsizip_file|vsizip_filter|output_ogr2ogr,
          input_sql_post|output_postgres_sql
 
-# chains = input_sql_post|output_postgres_sql
+#         input_bag_leveringsdoc_file|convert_vsi_to_etree_doc|transformer_xslt_leveringsdoc|output_ogr_postgis,
+#         input_cbs_gemeenten_csv|output_postgres_gemeenten,
+#         input_bag_wpl_gem_koppeling_file|convert_vsi_to_etree_doc|transformer_xslt_gem_wpl|output_ogr_postgis,
+
+#
+# INPUTS
+#
 
 # Pre SQL file inputs to be executed
 [input_sql_pre]
@@ -42,6 +46,69 @@ format_args = schema:{schema}
 class = stetl.inputs.fileinput.CsvFileInput
 file_path = data/cbs/gemeente/{cbs_gemeenten_jaar}.csv
 delimiter = ;
+
+
+# The zip file for the LV zipfile directly
+# contains the zip files for each bag obj type
+# Outputs VsiZip file strings
+[input_bag_vsizip_file]
+class = stetl.inputs.fileinput.VsiZipFileInput
+file_path = {bag_input_file}
+name_filter = {bag_obj_file_pat}.{file_ext_filter}
+
+# The GEM-WPL-RELATIE XML Input file
+[input_bag_wpl_gem_koppeling_file]
+class = stetl.inputs.fileinput.VsiZipFileInput
+file_path = {bag_input_file}
+name_filter = GEM-WPL-RELATIE*.xml
+
+# The Leveringsdocument-BAG-Extract XML Input file
+[input_bag_leveringsdoc_file]
+class = stetl.inputs.fileinput.VsiZipFileInput
+file_path = {bag_input_file}
+name_filter = Leveringsdocument-BAG-Extract.xml
+
+
+#
+# FILTERS
+#
+
+# Filter to extract a ZIP file one by one to a temporary location
+[extract_bag_vsizip_file]
+class = stetl.filters.fileextractor.VsiFileExtractor
+file_path = temp/bagger.{file_ext_filter}
+delete_file = True
+
+# Filter to extract a ZIP file one by one to a temporary location
+# [extract_bag_zip_file]
+# class = stetl.filters.fileextractor.ZipFileExtractor
+# file_path = temp/bagger.zip
+# delete_file = True
+
+# Filter to generate the vsizip-names
+[vsizip_filter]
+class = stetl.filters.stringfilter.StringConcatFilter
+prepend_string = /vsizip/
+
+# generic converter: OGR VSI (zip) path string to parsed XML tree doc
+[convert_vsi_to_etree_doc]
+class = stetl.filters.formatconverter.FormatConverter
+input_format = gdal_vsi_path
+output_format = etree_doc
+
+# XSLT transformer GEM-WPL-RELATIE to OGR Simple Feature GML doctree
+[transformer_xslt_gem_wpl]
+class = stetl.filters.xsltfilter.XsltFilter
+script = xsl/GEM-WPL-RELATIE2gml.xsl
+
+# XSLT transformer Leveringsdocument-BAG-Extract  to OGR Simple Feature GML doctree
+[transformer_xslt_leveringsdoc]
+class = stetl.filters.xsltfilter.XsltFilter
+script = xsl/Leveringsdoc2gml.xsl
+
+#
+# OUTPUTS
+#
 
 # Postgres provincie_gemeente tabel wegschrijven
 [output_postgres_gemeenten]
@@ -66,42 +133,6 @@ user = {pg_user}
 password = {password}
 schema = {schema}
 
-# The zip file for the LV zipfile directly
-# contains the zip files for each bag obj type
-# Outputs VsiZip file strings
-[input_bag_zip_file]
-class = stetl.inputs.fileinput.VsiZipFileInput
-file_path = {bag_input_file}
-name_filter = {bag_obj_file_pat}*.{file_ext_filter}
-
-# The GEM-WPL-RELATIE XML Input file
-[input_bag_wpl_gem_koppeling_file]
-class = stetl.inputs.fileinput.VsiZipFileInput
-file_path = {bag_input_file}
-name_filter = GEM-WPL-RELATIE*.xml
-
-# The Leveringsdocument-BAG-Extract XML Input file
-[input_bag_leveringsdoc_file]
-class = stetl.inputs.fileinput.VsiZipFileInput
-file_path = {bag_input_file}
-name_filter = Leveringsdocument-BAG-Extract.xml
-
-# generic converter: OGR VSI (zip) path string to parsed XML tree doc
-[convert_vsi_to_etree_doc]
-class = stetl.filters.formatconverter.FormatConverter
-input_format = gdal_vsi_path
-output_format = etree_doc
-
-# XSLT transformer GEM-WPL-RELATIE to OGR Simple Feature GML doctree
-[transformer_xslt_gem_wpl]
-class = stetl.filters.xsltfilter.XsltFilter
-script = xsl/GEM-WPL-RELATIE2gml.xsl
-
-# XSLT transformer Leveringsdocument-BAG-Extract  to OGR Simple Feature GML doctree
-[transformer_xslt_leveringsdoc]
-class = stetl.filters.xsltfilter.XsltFilter
-script = xsl/Leveringsdoc2gml.xsl
-
 # The ogr2ogr command-line for generic GML Features.
 [output_ogr_postgis]
 class = stetl.outputs.ogroutput.Ogr2OgrOutput
@@ -123,7 +154,7 @@ ogr2ogr_cmd = ogr2ogr
 class = stetl.outputs.execoutput.Ogr2OgrExecOutput
 
 # Must set as multiple input formats supported
-input_format = gdal_vsi_path
+input_format = string
 
 # destination format: OGR vector format name
 dest_format = PostgreSQL
