#296 #306 test with new Stetl Vsi components ok

--- a/bagv2/etl/conf/etl-imbag-2.1.0.cfg
+++ b/bagv2/etl/conf/etl-imbag-2.1.0.cfg
@@ -18,12 +18,12 @@
 [etl]
 # chains = input_bag_zip_file|extract_bag_zip_file|output_std
 chains = input_sql_pre|output_postgres_sql,
+         input_bag_leveringsdoc_file|convert_vsi_to_etree_doc|transformer_xslt_leveringsdoc|output_ogr_postgis,
+         input_cbs_gemeenten_csv|output_postgres_gemeenten,
+         input_bag_wpl_gem_koppeling_file|convert_vsi_to_etree_doc|transformer_xslt_gem_wpl|output_ogr_postgis,
          input_bag_vsizip_file|extract_bag_vsizip_file|vsizip_filter|output_ogr2ogr,
          input_sql_post|output_postgres_sql
 
-#         input_bag_leveringsdoc_file|convert_vsi_to_etree_doc|transformer_xslt_leveringsdoc|output_ogr_postgis,
-#         input_cbs_gemeenten_csv|output_postgres_gemeenten,
-#         input_bag_wpl_gem_koppeling_file|convert_vsi_to_etree_doc|transformer_xslt_gem_wpl|output_ogr_postgis,
 
 #
 # INPUTS
